--- a/next.html
+++ b/next.html
@@ -50,7 +50,7 @@
 										This celestial ballet, reaching its peak around January 29th, offers a unique chance to observe these celestial bodies in close proximity. Whether you're an avid astronomer or simply a curious observer, this celestial event promises an unforgettable experience.<br />
 									</p>
 								</header>
-								<div class="image main"><img src="images/1.png" alt="" /></div>
+								<div class="image main"><img src="images/planet.jpg" alt="" /></div>
 								<p></p>
 
 								<header class="major">
